correccion del html

--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -24,8 +24,8 @@
 
         <input class="form-control"
                type="text"
-               placeholder="Apellido",
-               name="apellido",
+               placeholder="Apellido"
+               name="apellido"
                ngModel
                required>
       </div>
@@ -39,7 +39,7 @@
 
       <input class="form-control"
              type="email"
-             placeholder="Correo electrónico",
+             placeholder="Correo electrónico"
              name="email"
              ngModel
              required>
