--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -4,7 +4,7 @@
 
   <div>
 
-    <div class="form-group row">
+    <div class="form-group row" [ngClass]="{'has-danger': nombre.errors?.required && nombre.touched || nombre.errors?.minlength}">
       <label class="col-2 col-form-label">Nombre</label>
       <div class="col-8">
 
@@ -16,10 +16,10 @@
                minlength="5"
                required
                #nombre="ngModel">
-               <div *ngIf="nombre.errors?.required && nombre.touched">
+               <div *ngIf="nombre.errors?.required && nombre.touched" class="form-control-feedback">
                    Este campo es requerido
                </div>
-               <div *ngIf="nombre.errors?.minlength">
+               <div *ngIf="nombre.errors?.minlength" class="form-control-feedback">
                    Por lo menos {{nombre.errors.minlength.requiredLength}} caracteres
                </div>
       </div>
@@ -75,7 +75,10 @@
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
-      <button type="submit" class="btn btn-outline-primary">
+      <button 
+      type="submit"
+      class="btn btn-outline-primary"
+      [disabled]="forma.invalid">
         Guardar
       </button>
     </div>
