--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -1,4 +1,4 @@
-<h4>Formularios <small>template</small></h4>
+<h4>Formularios logica template</h4>
 <hr>
 <form (ngSubmit)="guardar(forma)" #forma="ngForm" novalidate>
 
