--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -47,6 +47,29 @@
     </div>
   </div>
 
+  <div class="form-group row">
+        <label class="col-2 col-form-label">Password</label>
+        <div class="col-md-8">
+    
+          <input class="form-control"
+                 type="password"
+                 placeholder="contraseña"
+                 formControlName="password1">
+        </div>
+  </div>
+
+  <div class="form-group row">
+        <label class="col-2 col-form-label">Repetir password</label>
+        <div class="col-md-8">
+    
+          <input class="form-control"
+                 type="password"
+                 placeholder="Repetir contraseña"
+                 formControlName="password2">
+        </div>
+  </div>
+
+
 
   <div class="form-group row">
         <label class="col-2 col-form-label">Pasa Tiempos</label>
