--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -48,6 +48,17 @@
   </div>
 
   <div class="form-group row">
+        <label class="col-2 col-form-label">username</label>
+        <div class="col-md-8">
+    
+          <input class="form-control"
+                 type="text"
+                 placeholder="usuario"
+                 formControlName="username">
+        </div>
+  </div>
+
+  <div class="form-group row">
         <label class="col-2 col-form-label">Password</label>
         <div class="col-md-8">
     
@@ -107,5 +118,6 @@
 
 </form>
 
-
+<br>
+<pre>{{forma.status}}</pre>
 <pre>{{forma.valid}}</pre>
