Detectar cambios en los valores o estado del formulario ó un control

--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -119,5 +119,5 @@
 </form>
 
 <br>
-<pre>{{forma.status}}</pre>
-<pre>{{forma.valid}}</pre>
+<pre>Estado del formulario {{forma.status}}</pre>
+<pre>Validacion del formulario {{forma.valid}}</pre>
